--- a/game.html
+++ b/game.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geo Guess Game</title>
+    <title>Geotrainer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Geo Guess Game</h1>
+        <h1>Geotrainer</h1>
         <p id="location">Guess the location!</p>
         <p id="timer">Time left: 15s</p>
         <div id="map"></div>
@@ -16,7 +16,7 @@
         <p id="round">Round: 1/15</p>
         <div id="result"></div>
         <button id="newGame">New Round</button>
-        <button id="guess">Guess</button>
+        <button id="guess" disabled>Guess</button>
         <div id="gameOver" class="game-over hidden">
             <h2>Game Over!</h2>
             <p id="finalScore"></p>
