--- a/game.html
+++ b/game.html
@@ -19,9 +19,11 @@
         <button id="guess" disabled>Guess</button>
         <div id="gameOver" class="game-over hidden">
             <h2>Game Over!</h2>
-            <p id="finalScore"></p>
-            <button id="playAgain">Play Again</button>
-            <button id="backToHome">Back to Home</button>
+            <div id="roundSummary"></div>
+            <div class="game-over-buttons">
+                <button id="playAgain">Play Again</button>
+                <button id="backToHome">Back to Home</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
